spacing in articles fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,9 +38,10 @@ h2 {
   font-family: "Heebo", sans-serif;
   color: hsl(228, 100%, 99%);
   border-top: 5px;
-  font-size: 1.5em;
+  font-size: 1.2em;
   padding-top: 5px;
   padding-bottom: 5px;
+  letter-spacing: 1px;
 }
 a {
   font-family: "Heebo", sans-serif;
@@ -109,7 +110,10 @@ main {
 .btn {
   display: none;
 }
-
+button {
+  margin-left: 4px;
+  padding: 2px;
+}
 .pagingBtns {
   flex: 1;
   max-height: 5vh;
@@ -129,6 +133,11 @@ main {
   position: relative;
   align-items: center;
   width: auto;
+}
+.allarticles {
+  padding: 1em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 .results {
   flex: 1;
@@ -168,6 +177,18 @@ main {
 .clickable {
   background-color: #fafbff;
   list-style: none;
+}
+
+hr {
+  flex: 1;
+  width: 80vw;
+  height: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  border: 1px;
+  background-color: "#ff3f81";
 }
 
 /*animation*/
